--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "webpack --config webpack.config.js",
-    "startdev": "webpack-dev-server"
+    "startdev": "webpack-dev-server --host 0.0.0.0"
   },
   "author": "Amith",
   "license": "ISC",
